--- a/MMarket/css/MasterStyle.css
+++ b/MMarket/css/MasterStyle.css
@@ -1,13 +1,31 @@
 ﻿.MasCon {
-    position: fixed;
     top: 0;
     left: 0;
     right: 0;
-    background-color: #333;
-    font-family: Arial;
+    height: 50px;
+    width: 100%;
+    /*background-color: #333;
+    font-family: Arial;*/
 }
 
-    .MasCon a {
+    /*.MasCon a {
+        float: left;
+        font-size: 16px;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+    }*/
+
+.MasConSec {
+    height: 50px;
+    width: 100%;
+    /*text-align: center;
+    background-color: #333;
+    font-family: Arial;*/
+}
+
+/*.MasConSec a {
         float: left;
         font-size: 16px;
         color: white;
@@ -16,51 +34,13 @@
         text-decoration: none;
     }
 
-.dropdown1 {
-    float: left;
-    overflow: hidden;
+        .MasConSec a:hover {
+            background-color: darkgoldenrod;
+        }*/
+
+.navbarsec-fixed {
+    top: 50px;
+    z-index: 100;
+    position: fixed;
+    width: 100%;
 }
-
-    .dropdown1 .dropbtn {
-        font-size: 16px;
-        border: none;
-        outline: none;
-        color: white;
-        padding: 14px 16px;
-        background-color: inherit;
-    }
-
-    .MasCon a:hover, .dropdown1:hover .dropbtn {
-        background-color: darkgoldenrod;
-    }
-
-.dropdown1-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-    .dropdown1-content a {
-        float: none;
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-        text-align: left;
-    }
-
-        .dropdown1-content a:hover {
-            background-color: #ddd;
-        }
-
-.dropdown1:hover .dropdown1-content {
-    display: block;
-}
-
-/*#main {
-    transition: margin-left .5s;
-    padding: 16px;
-}*/
