--- a/MMarket/MyMaster.Master
+++ b/MMarket/MyMaster.Master
@@ -15,8 +15,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" />
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="https://andwecode.com/wp-content/uploads/2015/10/jquery.leanModal.min_.js"></script>
-    <asp:ContentPlaceHolder id="head" runat="server">
-    </asp:ContentPlaceHolder>
+
     <title>MaritaMarket</title>
 
 </head>
@@ -163,6 +162,8 @@
             <a href="SlatkisiGrickalice.aspx">Slatkiši i Grickalice</a>
             <a href="Datulje.aspx">Datulje</a>
             <a href="CajeviKave.aspx">Čajevi i Kave</a>
+            <a href="Pica.aspx">Pića</a>
+            <a href="Kozmetika.aspx">Kozmetika</a>
         </nav>
 
         <asp:ContentPlaceHolder id="ContentPlaceHolder2" runat="server">
