--- a/MMarket/MyMaster.Master
+++ b/MMarket/MyMaster.Master
@@ -21,8 +21,32 @@
 </head>
 <body>
     <form id="form1" runat="server">
+
+          <nav  id="top_nav" class="navbar navbar-fixed-top navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button style="border-color:red" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav_sec3">
+        <span style="color:red">Menu</span>                      
+      </button>
+
+    </div>
+    <div class="collapse navbar-collapse" id="nav_sec3" >
+      <ul class="nav navbar-nav">
+       <%--   <li class="active"><a href="#">Home</a></li>--%>
+        <li><a href="Home.aspx"><img src="Images/Logo.png" width="100" /></a></li>
+        <li><a href="Kontakt.aspx">Contact</a></li>
+        <li><a href="#about">About us</a></li>
+        <li><a href="#" id="btnLogout" CausesValidation="False" runat="server" onserverclick="BtnLogout_Click">Logout</a>
+        <li><a id="modal_trigger" href="#modal" runat="server">Login or Register</a></li>
+        <li><a href="#gallery">Shop</a></li>
+        <li><a id="adminLink" href="AdminPage.aspx" style="float: right" runat="server">Admin Page</a></li>
+      </ul>
+
+    </div>
+  </div>
+</nav>
         
-        <nav id="top_nav" class="navbar-fixed-top">
+        <%--<nav id="top_nav2" class="navbar-fixed-top">
         <a href="Home.aspx"><img src="Images/Logo.png" width="100" /></a>
         <a href="Kontakt.aspx">Contact</a>
         <a href="#about">About us</a>
@@ -30,7 +54,7 @@
             <a id="modal_trigger" href="#modal" style="float: right" runat="server">Login or Register</a>
         <a href="#gallery" style="float: right">Shop</a>
         <a id="adminLink" href="AdminPage.aspx" style="float: right" runat="server">Admin Page</a>
-        </nav>
+        </nav>--%>
 
             <div id="modal" class="popupContainer" style="display:none">
 				<header class="popupHeader">
@@ -158,10 +182,8 @@
         <nav  id="nav_sec" class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav_sec2">
-        <span class="icon-bar "></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
+      <button style="border-color:red" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav_sec2">
+        <span style="color:red">Kategorije</span>                      
       </button>
 
     </div>
