--- a/MMarket/MyMaster.Master
+++ b/MMarket/MyMaster.Master
@@ -31,16 +31,17 @@
 
     </div>
     <div class="collapse navbar-collapse" id="nav_sec3" >
-      <ul class="nav navbar-nav">
-       <%--   <li class="active"><a href="#">Home</a></li>--%>
-          <li><a href="Home.aspx"><img src="Images/Logo.png" width="100" /></a></li>
-          <li><a href="Kontakt.aspx">Contact</a></li>
-          <li><a href="#about">About us</a></li>
-          <li><a href="#Cart">Shop</a></li>
-          <li><a id="adminLink" href="AdminPage.aspx" runat="server">Admin Page</a></li>
-          <li><a id="modal_trigger" href="#modal" runat="server">Login or Register</a></li>
-          <li><a href="#" id="btnLogout" CausesValidation="False" runat="server" onserverclick="BtnLogout_Click">Logout</a>
-      </ul>
+      <ul class="nav lista1 navbar-nav">
+          <li><a href="Home.aspx"><img src="Images/Logo.png" width="180" /></a></li>
+         </ul>   
+         
+      <ul class="nav lista2 navbar-nav">
+          <li><a href="Kontakt.aspx" style="color: midnightblue;">Contact</a></li>
+          <li><a href="#Cart" style="color: midnightblue;">Shop</a></li>
+          <li><a id="adminLink" href="AdminPage.aspx" style="color: midnightblue;" runat="server">Admin Page</a></li>
+          <li><a id="modal_trigger" href="#modal" style="color: midnightblue;" runat="server">Login or Register</a></li>
+          <li><a href="#" id="btnLogout" style="color: midnightblue;" CausesValidation="False" runat="server" onserverclick="BtnLogout_Click">Logout</a>
+    </ul>  
 
     </div>
   </div>
@@ -67,8 +68,8 @@
 						<div class="social_login">
 
 								<div class="action_btns">
-										<div class="one_half"><a href="#" id="login_form" class="btn">Login</a></div>
-										<div class="one_half last"><a href="#" id="register_form" class="btn">Sign up</a></div>
+										<div class="one_half"><a href="#" id="login_form" class="btn" style="background-color: slategray; border-color:slategrey;">Login</a></div>
+										<div class="one_half last"><a href="#" id="register_form" class="btn" style="background-color: slategray; border-color:slategrey";>Sign up</a></div>
 								</div>
 						</div>
 
@@ -87,12 +88,12 @@
 
 										<div class="checkbox">
 												<input id="remember" type="checkbox" />
-												<label for="remember">Remember me on this computer</label>
+												<label for="remember">Remember me</label>
 										</div>
 
 										<div class="action_btns">
-                                            <div class="one_half"><a href="#" class="btn back_btn"><i class="fa fa-angle-double-left"></i> Back</a></div>
-                                            <div class="one_half last"><a class="btn btn_red"><asp:Button ID="btnLogin" runat="server" style="cursor:pointer; margin-top: 0px" Text="Login" BorderStyle="None" BackColor="Transparent" Height="100%" Width="100%" CausesValidation="False" OnClick="btnLogin_Click" /></a></div>
+                                            <div class="one_half"><a href="#" class="btn back_btn" style="background-color: slategray; border-color:slategrey;"><i class="fa fa-angle-double-left"></i> Back</a></div>
+                                            <div class="one_half last"><a class="btn btn_red" style="background-color: slategray; border-color:slategrey;"><asp:Button ID="btnLogin" runat="server" style="cursor:pointer; margin-top: 0px; text-align:center;" Text="Login" BorderStyle="None" BackColor="Transparent"  Height="100%" Width="100%" CausesValidation="False" OnClick="btnLogin_Click" /></a></div>
 										</div>
 
 								<a href="#" class="forgot_password">Forgot password?</a>
@@ -157,11 +158,7 @@
                             </table>
                             <asp:Label ID="lblRegisterError" runat="server" Visible="False" ForeColor="#FF3300"></asp:Label>
 
-										<div class="checkbox">
-												<input id="send_updates" type="checkbox" />
-												<label for="send_updates">Send me occasional email updates</label>
-										</div>
-
+										
 										<div class="action_btns">
                                             <div class="one_half"><a href="#" class="btn back_btn"><i class="fa fa-angle-double-left"></i> Back</a></div>
                                             <div class="one_half last"><a class="btn btn_red"><asp:Button ID="btnRegister" runat="server" style="cursor:pointer" Text="Register" BorderStyle="None" BackColor="Transparent" Height="100%" Width="100%" OnClick="btnRegister_Click" /></a></div>
@@ -173,13 +170,13 @@
         <script src="js/modal.js"></script>
     
     
-    <div id="content_div" style="background-image: url('Images/Oriental Background.jpg'); margin-top: 50px;">
+    <div id="content_div" style="background-color:white; margin-top: 50px;">
         <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
         
         </asp:ContentPlaceHolder>
     </div>
 
-        <nav  id="nav_sec" class="navbar navbar-inverse">
+        <nav  id="nav_sec" class="navbar navbar-Drugi navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
       <button style="border-color:red" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav_sec2">
@@ -188,18 +185,18 @@
 
     </div>
     <div class="collapse navbar-collapse" id="nav_sec2" >
-      <ul class="nav navbar-nav">
+      <ul class="nav navDrugi navbar-nav">
        <%--   <li class="active"><a href="#">Home</a></li>--%>
-        <li><a href="SmrznutaHrana.aspx">Smrznuta Hrana</a></li>
-        <li><a href="Sirevi.aspx">Sirevi</a></li>
-        <li> <a href="KonzerviranaHrana.aspx">Konzervirana Hrana</a></li>
-        <li><a href="Zitarice.aspx">Žitarice</a></li>
-        <li><a href="zacini.aspx">Začini</a></li>
-        <li><a href="SlatkisiGrickalice.aspx">Slatkiši i Grickalice</a></li>
-        <li><a href="Datulje.aspx">Datulje</a></li>
-        <li> <a href="CajeviKave.aspx">Čajevi i Kave</a></li>
-        <li> <a href="Pica.aspx">Pića</a></li>
-        <li><a href="Kozmetika.aspx">Kozmetika</a></li>
+        <li><a href="SmrznutaHrana.aspx" style="color:white;">Smrznuta Hrana</a></li>
+        <li><a href="Sirevi.aspx" style="color:white">Sirevi</a></li>
+        <li> <a href="KonzerviranaHrana.aspx" style="color:white">Konzervirana Hrana</a></li>
+        <li><a href="Zitarice.aspx" style="color:white">Žitarice</a></li>
+        <li><a href="zacini.aspx" style="color:white">Začini</a></li>
+        <li><a href="SlatkisiGrickalice.aspx" style="color:white">Slatkiši i Grickalice</a></li>
+        <li><a href="Datulje.aspx" style="color:white">Datulje</a></li>
+        <li> <a href="CajeviKave.aspx" style="color:white">Čajevi i Kave</a></li>
+        <li> <a href="Pica.aspx" style="color:white">Pića</a></li>
+        <li><a href="Kozmetika.aspx" style="color:white">Kozmetika</a></li>
       </ul>
 
     </div>
@@ -217,6 +214,9 @@
             <a href="Pica.aspx">Pića</a>
             <a href="Kozmetika.aspx">Kozmetika</a>
         </nav>--%>
+
+        <br />
+        <br />
 
         <asp:ContentPlaceHolder id="ContentPlaceHolder2" runat="server">
         
