--- a/MMarket/MyMaster.Master
+++ b/MMarket/MyMaster.Master
@@ -11,6 +11,7 @@
     <script src="Scripts/bootstrap.min.js"></script>
     <link href="css/MasterStyle.css" rel="stylesheet" /> 
     <link href="css/LoginStyle.css" rel="stylesheet" />
+    <link href="css/BadgeStyle.css" rel="stylesheet" />
     <script src="Scripts/scrip-1.0.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" />
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -36,7 +37,7 @@
           <li><a href="Home.aspx"><img src="Images/Logo.png" width="100" /></a></li>
           <li><a href="Kontakt.aspx">Contact</a></li>
           <li><a href="#about">About us</a></li>
-          <li><a href="#Cart">Shop</a></li>
+          <li><a href="Cart.aspx"><div id="cartBadge" runat="server" class="badge1" style="height: 90%"><img src="Images/cart.png" height="17" /></div></a></li>
           <li><a id="adminLink" href="AdminPage.aspx" runat="server">Admin Page</a></li>
           <li><a id="modal_trigger" href="#modal" runat="server">Login or Register</a></li>
           <li><a href="#" id="btnLogout" CausesValidation="False" runat="server" onserverclick="BtnLogout_Click">Logout</a>
@@ -190,16 +191,17 @@
     <div class="collapse navbar-collapse" id="nav_sec2" >
       <ul class="nav navbar-nav">
        <%--   <li class="active"><a href="#">Home</a></li>--%>
-        <li><a href="SmrznutaHrana.aspx">Smrznuta Hrana</a></li>
-        <li><a href="Sirevi.aspx">Sirevi</a></li>
-        <li> <a href="KonzerviranaHrana.aspx">Konzervirana Hrana</a></li>
-        <li><a href="Zitarice.aspx">Žitarice</a></li>
-        <li><a href="zacini.aspx">Začini</a></li>
-        <li><a href="SlatkisiGrickalice.aspx">Slatkiši i Grickalice</a></li>
-        <li><a href="Datulje.aspx">Datulje</a></li>
-        <li> <a href="CajeviKave.aspx">Čajevi i Kave</a></li>
-        <li> <a href="Pica.aspx">Pića</a></li>
-        <li><a href="Kozmetika.aspx">Kozmetika</a></li>
+          <li><a href="SmrznutaHrana.aspx">Smrznuta Hrana</a></li>
+          <li><a href="Sirevi.aspx">Sirevi</a></li>
+          <li><a href="KonzerviranaHrana.aspx">Konzervirana Hrana</a></li>
+          <li><a href="Zitarice.aspx">Žitarice</a></li>
+          <li><a href="zacini.aspx">Začini</a></li>
+          <li><a href="SlatkisiGrickalice.aspx">Slatkiši i Grickalice</a></li>
+          <li><a href="Datulje.aspx">Datulje</a></li>
+          <li><a href="CajeviKave.aspx">Čajevi i Kave</a></li>
+          <li><a href="Pica.aspx">Pića</a></li>
+          <li><a href="Kozmetika.aspx">Kozmetika</a></li>
+          <li><a href="Ostalo.aspx">Ostalo</a></li>
       </ul>
 
     </div>
