--- a/MMarket/css/MasterStyle.css
+++ b/MMarket/css/MasterStyle.css
@@ -1,9 +1,11 @@
 ﻿
 .navbarsec-fixed {
+    top: 50px;
     z-index: 100;
     position: fixed;
-    width: 100%; 
+    width: 100%;
 }
+
 .navbar-fixed-top {
     background-color: #e3e6ec;
     border-bottom-color: #e3e6ec;
@@ -20,7 +22,8 @@
     margin-top: 6px;
     color: midnightblue;
 }
-    .lista2 li a{
+
+    .lista2 li a {
         font-size: 16px;
         color: midnightblue;
         text-align: center;
@@ -33,8 +36,8 @@
         color: lighten(#03c, 15%);
     }
 
-.navbar-toggle:hover{
-   background-color:lightblue;
+.navbar-toggle:hover {
+    background-color: lightblue;
 }
 
 /*.navbar-Drugi {
