--- a/MMarket/css/CartStyle.css
+++ b/MMarket/css/CartStyle.css
@@ -1,4 +1,4 @@
-﻿.table > tbody > tr > td, .table > tfoot > tr > td {
+﻿/*.table > tbody > tr > td, .table > tfoot > tr > td {
     vertical-align: middle;
 }
 
@@ -52,4 +52,96 @@
         table#cart tfoot td .btn {
             display: block;
         }
+}*/
+
+/*----------------------------------*/
+
+.commerce .cart-empty {
+    font-size: 2em;
+    font-weight: 700;
+    color: #1e1e1e;
+    text-align: center;
 }
+
+.commerce .return-to-shop {
+    text-align: center;
+}
+
+    .commerce .return-to-shop .button {
+        display: inline-block;
+        margin-bottom: 0;
+        font-weight: 400;
+        text-align: center;
+        vertical-align: middle;
+        cursor: pointer;
+        background-image: none;
+        border: 1px solid transparent;
+        white-space: nowrap;
+        padding: 0.6rem 1.7rem;
+        font-size: 13px;
+        line-height: 1.3;
+        -webkit-transition: background-color 0.3s, border-color 0.3s, text-color 0.3s, box-shadow 0.3s;
+        -o-transition: background-color 0.3s, border-color 0.3s, text-color 0.3s, box-shadow 0.3s;
+        transition: background-color 0.3s, border-color 0.3s, text-color 0.3s, box-shadow 0.3s;
+        -webkit-border-radius: 0px;
+        border-radius: 0px;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        outline: none;
+        background-color: #ebebec;
+        border-color: #ebebec;
+        background: transparent;
+        border: 2px solid #1e1e1e;
+        text-transform: uppercase;
+        color: #1e1e1e;
+        position: relative;
+    }
+
+        .commerce .return-to-shop .button:hover,
+        .commerce .return-to-shop .button:focus {
+            color: #1e1e1e;
+            text-decoration: none;
+        }
+
+        .commerce .return-to-shop .button i,
+        .commerce .return-to-shop .button span {
+            z-index: 2;
+            position: relative;
+        }
+
+        .commerce .return-to-shop .button:hover,
+        .commerce .return-to-shop .button:focus,
+        .commerce .return-to-shop .button:active,
+        .commerce .return-to-shop .button.active {
+            color: #1e1e1e;
+            border-color: #d1d1d3;
+            -webkit-box-shadow: 0 0 0 2px #d1d1d3 inset;
+            box-shadow: 0 0 0 2px #d1d1d3 inset;
+        }
+
+        .commerce .return-to-shop .button:active,
+        .commerce .return-to-shop .button.active {
+            background-image: none;
+        }
+
+        .commerce .return-to-shop .button:hover {
+            border-color: #1e1e1e;
+            -webkit-box-shadow: 0 0 0 1px inset;
+            box-shadow: 0 0 0 1px inset;
+        }
+
+/*.wc-backward:before,
+.wc-backward a:before {
+    font-family: 'WooCommerce';
+    speak: none;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    margin-right: 0.5384615384615384em;
+    content: "\e02f";
+    font-size: .7em;
+}*/
