--- a/MMarket/MyMaster.Master
+++ b/MMarket/MyMaster.Master
@@ -13,6 +13,7 @@
     <link href="css/MasterStyle.css" rel="stylesheet" /> 
     <link href="css/LoginStyle.css" rel="stylesheet" />
     <link href="css/BadgeStyle.css" rel="stylesheet" />
+    <link href="css/CartStyle.css" rel="stylesheet" />
     <script src="Scripts/scrip-1.0.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" />
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -153,7 +154,7 @@
 										
 										<div class="action_btns">
                                             <div class="one_half"><a href="#" class="btn back_btn"><i class="fa fa-angle-double-left"></i> Back</a></div>
-                                            <div class="one_half last"><a class="btn btn_red"><asp:Button ID="btnRegister" runat="server" style="cursor:pointer" Text="Register" BorderStyle="None" BackColor="Transparent" Height="100%" Width="100%" OnClick="btnRegister_Click" /></a></div>
+                                            <div class="one_half last"><a class="btn btn_red"><asp:Button ID="btnRegister" runat="server" style="cursor:pointer" Text="Register" BorderStyle="None" BackColor="Transparent" Height="100%" Width="100%" OnClick="btnRegister_Click" CausesValidation="False" /></a></div>
 										</div>
 						</div>
 						
@@ -194,12 +195,53 @@
     </div>
   </div>
 </nav>
-
-        <div id="conDiv2" style="margin-top: 30px">
+        <div id="conDiv2" style="margin-top: 30px; margin-bottom: 30px;">
             <asp:ContentPlaceHolder id="ContentPlaceHolder2" runat="server">
 
             </asp:ContentPlaceHolder>
         </div>
     </form>
+    <footer id="myFooter" class="footer">
+            <div class="footer-contact">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <div class="footer-contact-item">
+                                <div class="footer-contact-icon">
+                                    <i class="fa fa-map-marker"></i>
+                                </div>
+                                <div class="footer-contact-text"><a href="https://goo.gl/maps/PSfpxqr94422">Jaruščica 9a, Zagreb, Croatia</a></div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="footer-contact-item">
+                                <div class="footer-contact-icon">
+                                    <i class="fa fa-phone"></i>
+                                </div>
+                                <div class="footer-contact-text"><a href="tel:+385912202044">+(385) 91 2202044</a></div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="footer-contact-item">
+                                <div class="footer-contact-icon">
+                                    <i class="fa fa-envelope-o"></i>
+                                </div>
+                                <div class="footer-contact-text"><a href="mailto:info@al-basha.eu">info@al-basha.eu</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-info">
+                <a href="#" class="go-to-top"><i class="fa fa-angle-double-up"></i></a>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12 text-center">
+                            <div class="copyright text-center">&copy; Smislit ćemo nešto <%: DateTime.Now.Year %>. All Rights Reserved.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
 </body>
 </html>
