--- a/MMarket/Content/bootstrap-theme.css
+++ b/MMarket/Content/bootstrap-theme.css
@@ -368,16 +368,14 @@
 }
 
 .navbar-default {
-    background-image: -webkit-linear-gradient(top, #fff 0%, #f8f8f8 100%);
-    background-image: -o-linear-gradient(top, #fff 0%, #f8f8f8 100%);
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#f8f8f8));
-    background-image: linear-gradient(to bottom, #fff 0%, #f8f8f8 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff8f8f8', GradientType=0);
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+    background-color: #990400 !important;
+    border-color: #990400 !important;
+    border-radius: 0px !important;
+    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 5px rgba(0, 0, 0, .075) !important;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 5px rgba(0, 0, 0, .075) !important;
     background-repeat: repeat-x;
     border-radius: 4px;
-    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 5px rgba(0, 0, 0, .075);
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 5px rgba(0, 0, 0, .075);
+
 }
 
     .navbar-default .navbar-nav > .open > a,
@@ -398,17 +396,29 @@
 }
 
 .navbar-Drugi {
-    background-color: midnightblue !important;
-    border-color: midnightblue !important;
+    background-color: #990400 !important;
+    border-color: #990400 !important;
     border-radius: 0px !important;
     -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 5px rgba(0, 0, 0, .075) !important;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 5px rgba(0, 0, 0, .075) !important;
 }
+    .navbar-Drugi li {
+        float: none;
+        display: inline-block;
+        list-style-type: none;
+        text-align: center;
+        margin-left:15px;
+    }
+
+    .navbar-Drugi li:hover {
+        transform: translateY(-3px);
+        color: lighten(#03c, 15%);
+    }
 
     .navbar-Drugi .navbar-nav > .open > a,
     .navbar-Drugi .navbar-nav > .active > a {
-        background-color: midnightblue !important;
-        border-color: midnightblue !important;
+        background-color: #990400 !important;
+        border-color: #990400 !important;
         border-radius: 0px !important;
         background-repeat: repeat-x !important;
         -webkit-box-shadow: inset 0 3px 9px rgba(0, 0, 0, .075) !important;
