--- a/MMarket/Content/bootstrap-theme.css
+++ b/MMarket/Content/bootstrap-theme.css
@@ -399,6 +399,7 @@
     background-color: #990400 !important;
     border-color: #990400 !important;
     border-radius: 0px !important;
+    min-height:60px;
     -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 5px rgba(0, 0, 0, .075) !important;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 5px rgba(0, 0, 0, .075) !important;
 }
