--- a/MMarket/css/MasterStyle.css
+++ b/MMarket/css/MasterStyle.css
@@ -173,3 +173,94 @@ a.go-to-top:hover a.go-to-top:focus {
     margin-left: -15px;
 }
 
+#social-icons {
+    text-align: center;
+}
+
+    #social-icons i {
+        margin: 15px;
+        padding: 10px;
+        font-size: 20px;
+        border-radius: 20%;
+        -webkit-transition: 0.2s ease-in;
+        -moz-transition: 0.2s ease-in;
+        -ms-transition: 0.2s ease-in;
+        -o-transition: 0.2s ease-in;
+        transition: 0.2s ease-in;
+    }
+
+        #social-icons i:hover {
+            color: #f1f1f1;
+            box-shadow: inset 0 -3px rgba(0, 0, 0, 0.16), inset 0 -3px rgba(0, 0, 0, 0.15);
+            border-bottom: 0
+        }
+
+.fa-facebook {
+    border-bottom: 2px solid #3b5998;
+}
+
+.fa-twitter {
+    border-bottom: 2px solid #1da1f2;
+}
+
+.fa-pinterest {
+    border-bottom: 2px solid #bd081c;
+}
+
+.fa-linkedin {
+    border-bottom: 2px solid #0077b5;
+}
+
+.fa-dribbble {
+    border-bottom: 2px solid #ea4c89;
+}
+
+.fa-instagram {
+    border-bottom: 2px solid #f77737;
+}
+
+.fa-behance {
+    border-bottom: 2px solid #1769ff;
+}
+
+.fa-google-plus {
+    border-bottom: 2px solid #dd4b39;
+}
+
+/*hover*/
+
+.fa-facebook:hover {
+    background: #3b5998;
+}
+
+.fa-twitter:hover {
+    background: #1da1f2;
+}
+
+.fa-pinterest:hover {
+    background: #bd081c;
+}
+
+.fa-linkedin:hover {
+    background: #0077b5;
+}
+
+.fa-dribbble:hover {
+    background: #ea4c89;
+}
+
+.fa-instagram:hover {
+    background: #f77737;
+}
+
+.fa-behance:hover {
+    background: #1769ff;
+}
+
+.fa-google-plus:hover {
+    background: #dd4b39;
+}
+
+/*footer {
+    text-align: center;
+}*/
