Dodana jos jedna tablica i promjenjeno tu i tamo nesto

--- a/MMarket/MyMaster.Master
+++ b/MMarket/MyMaster.Master
@@ -205,6 +205,11 @@
 
             </asp:ContentPlaceHolder>
         </div>
+        <div id="conDiv3" style="margin-top: 30px; margin-bottom: 30px;">
+            <asp:ContentPlaceHolder id="ContentPlaceHolder3" runat="server">
+
+            </asp:ContentPlaceHolder>
+        </div>
     </form>
     <footer id="myFooter" class="footer">
             <div class="footer-contact">
